<resources>
    <string name="m_before_you_start">Before you start</string>
    <string name="m_disclaimer">Disclaimer</string>
    <string name="m_read_disclaimer">Read Disclaimer</string>
    <string name="m_foreword">
		This app will estimate the risk you have for getting HIV (AIDS) through sexual activities and will advise you about what to do to prevent getting an infection or diagnose it promptly based on international scientific standards. This guide does not substitute professional advisory.
   	</string>
   	<string name="m_disclaimer_content_0">
   	    This is an agreement for the use of this application between You (The User) and the “HIV RISK Calculator” development team (Us).\n \n   	    
   	</string>
 	<string name="m_disclaimer_title_1">
   	   	1. You are of legal age for viewing this content.  	    
   	</string>
	<string name="m_disclaimer_content_1">
   	    You agree that you will use the application only if you have are of legal age for this kind of content and if this content is legal according to your country and jurisdiction.\n\n
	</string>
   	<string name="m_disclaimer_title_2">
   	    2. This application does not perform diagnosis nor substitutes medical care.
	</string>
	<string name="m_disclaimer_content_2">
   	    You agree that this application will make a risk estimate for guidance and information purposes, this application does not perform diagnosis nor replaces the assistance of health providers.\n\n
	</string>
   	<string name="m_disclaimer_title_3">
   	    3. Reliable scientific information and current, but is subject to change
	</string>
	<string name="m_disclaimer_content_3">
   	    You agree that this application takes as reference current scientific guides and recommendations of international organizations without any ideological bias, however, new scientific knowledge is obtained every day, that’s why we are not responsible for the accuracy of the content.\n\n
	</string>
   	<string name="m_disclaimer_title_4">
   	    4. We are not responsible for your results.
	</string>
   	<string name="m_disclaimer_content_4">
   	    You agree that the information and calculations presented by this application are for educational purposes, thereby, we do not assume any responsibility for the consistency of this information with the opinion or diagnosis of health providers.\n\n
	</string>
   	<string name="m_disclaimer_title_5">
   	    5. Use the app under your own responsibility.
	</string>
	<string name="m_disclaimer_content_5">
		You agree that the information and calculations presented by this application are for educational purposes, thereby, we do not assume any responsibility for the consistency of this information with the opinion or diagnosis of health providers.\n\n
	</string>
	<string name="m_disclaimer_title_6">
   	    6. Privacy: No personal data will be collected.
    </string>
	<string name="m_disclaimer_content_6">
   	    This application does not collect any personal information. If you decide to, your result would be sent anonymously for statistical analysis.\n\n
	</string>
   	<string name="m_disclaimer_title_7">
   	    7. Just Original Application.
	</string>
	<string name="m_disclaimer_content_7">
		You agree that in order to use this application you should have acquired it from an application online store and will operate under its terms.\n\n  	    
   	</string>
	<string name="m_activate">When you agree, your app will be activated as well, this requires Internet.</string>
    <string name="m_should_agree_to_proceed">You should agree to the disclaimer in order to continue</string>
    <string name="m_you_have_agreed">Remember that you already agreed the disclaimer</string>
    <string name="m_wish_to_read_again">Click here if you want to read the disclaimer again or you don\'t agree anymore</string>
    <string name="m_discl_agree">I have understood and I agree</string>
    <string name="m_discl_dont">I do not agree</string>
    <string name="m_start">Start</string>
    <string name="m_legal_advice">Legal Advice</string>
    <string name="m_0step">What concerns you?</string>
    <string name="m_0step_title">Describe your situation</string>
    <string name="m_0step_content"></string>
    <string name="m_0step_help"></string>
    <string name="m_about_me">I\'m worried about getting infected by a person with whom I had sex</string>
    <string name="m_about_other">I\'m concerned about infecting my partner because I\'m (maybe) HIV positive</string>
    <string name="m_about_activities">I want to know more about how risky sexual practices are</string>
    <string name="m_1step">You</string>
    <string name="m_1step_title">Choose your gender</string>
    <string name="m_1step_content"></string>
    <string name="m_1step_help"></string>
    <string name="m_2step">Your partner</string>
    <string name="m_2step_title">...and the gender of your sexual partner</string>
    <string name="m_2step_content"></string>
    <string name="m_2step_help"></string>
    <string name="m_3step">The bare truth!</string>
    <string name="m_3step_title">Sexual activities:</string>
    <string name="m_3step_content">Select all the activities you have performed with your partner last time</string>
    <string name="m_3step_help">You can select up to 5 activities. If you had more, you will need to do the wizard again for the rest of them</string>
    <string name="m_4step">And the most important thing!</string>
    <string name="m_4step_title">Safe sex?</string>
    <string name="m_4step_content">Select if you have used condom or other barrier during this activity</string>
    <string name="m_4step_help"></string>
    <string name="m_9step">Between Whom?</string>
    <string name="m_9step_title">Sexual Activities</string>
    <string name="m_9step_content">Select the sexual activities you want to be listed</string>
    <string name="m_9step_help"></string>
    <string name="m_10step">Which one?</string>
    <string name="m_10step_title">Select the sexual activity you want to know more about</string>
    <string name="m_10step_content"></string>
    <string name="m_10step_help"></string>
    <string name="m_11step">Sexual Activities</string>
    <string name="m_11step_title"></string>
    <string name="m_11step_content">More info at:</string>
    <string name="m_11step_help"></string>
    <string name="m_resourcecenter">Online Resource Center</string>
    <string name="m_externalsite">Other online resources</string>
    <string name="m_wikiart">Wikipedia Article</string>
    <string name="m_malemale">Male to Male</string>
    <string name="m_femalefemale">Female to Female</string>
    <string name="m_femalemale">Female/Male, Male/Female</string>
    <string name="m_allall">All Sexual Activities</string>
    <string name="m_male">Male</string>
    <string name="m_female">Female</string>
    <string name="m_male_d_nom">Male</string>
    <string name="m_female_d_nom">Female</string>
    <string name="m_male_d_ins">Male</string>
    <string name="m_female_d_ins">Female</string>
    <string name="m_protected">We used condom or other barrier method correctly</string>
    <string name="m_broken">We used it but it broke or we used it incorrectly</string>
    <string name="m_unprotected">We didn\'t used any kind of protection</string>
    <string name="m_review_title">Is this correct?</string>
    <string name="m_review_content">Take a look before you proceed</string>
    <string name="m_results_title">Results</string>
    <string name="m_results_atrisk_0">Am I at risk?</string>
    <string name="m_results_atrisk_1">Is my partner at risk?</string>
    <string name="m_results_assume_0">Assuming that your partner were HIV positive, your risk for getting HIV is:</string>
    <string name="m_results_assume_1">Assuming that you were HIV positive, your partner\'s risk for getting HIV is:</string>
    <string name="m_results_taketest_0">Should I have to take the HIV test?</string>
    <string name="m_results_test_nodanger_0">You don\'t need to regarding these sexual activities.</string>
    <string name="m_results_test_verylow_0">You don\'t need to regarding these sexual activities. However, if you had sex more than one sexual partners, a yearly HIV test is recommended.</string>
    <string name="m_results_test_low_0">A yearly HIV test is recommended at least if you perform this activities often</string>
    <string name="m_results_test_considerable_0">An HIV test is recommended in no more than 6 months, specially if you have more sexual partners. You should also go to your health professional  for guidance about other STDs testing.</string>
    <string name="m_results_test_high_0">You should get the HIV test promptly! after this, you have to go to your health professional. Nevertheless, if the intercourse happened in less than a week, you should visit your health professional before getting tested.</string>
    <string name="m_results_why">The risk assessment was estimated regarding the most risky of the activities you have selected: \n</string>
    <string name="m_results_taketest_1">Should my partner be tested for HIV?</string>
    <string name="m_results_test_nodanger_1">Your partner doesn\'t has to be tested regarding these sexual activities</string>
    <string name="m_results_test_verylow_1">Is recommended for your partner to have an annual test at least.</string>
    <string name="m_results_test_low_1">Is recommended for your partner to have an annual test at least.</string>
    <string name="m_results_test_considerable_1">Is recommended for your partner to have an HIV test in no more than 6 months, and should also look for medical guidance about other STDs.</string>
    <string name="m_results_test_high_1">Make your partner being tested as soon as possible, after this, your partner has to go to a health professional. However, if the intercourse happened in less than a week, your partner needs to go to a health professional before getting tested.</string>
    <string name="m_results_riskmod">Things that may increase the risk</string>
    <string name="m_results_riskmod_0">
        Having sex with too many partners increases the risk of getting HIV or other STD infections.
        Furthermore, if you do not know your partner or is a casual partner, or if the intercourse happened in a hookup place, the risk gets even higher.
        Having skin or mucosal injuries also increase the risk.
    </string>
    <string name="m_results_risk_haart_0">But, what if my partner is HIV positive and is receiving treatment?</string>
    <string name="m_results_risk_haart_1">But, what if I am HIV positive and currently receiving treatment?</string>
    <string name="m_results_riskless_0">
		Recent finding suggest that if your partner, had been receiving and adequate and successful antiretroviral therapy with undetectable viral load, the risk you have for getting infection lowers up to 90%. 
		However, this doesn\'t mean that you are at no risk at all, that\'s why is always preferable the correct use of condom during sexual intercourse. 
		If your on a stable partnership consult your health provider for knowing more about having sexual a safe sexual life with your partner.
    </string>
    <string name="m_tip_barrier">Barrier method?</string>
    <string name="m_tip_correctly">Correctly?</string>
    <string name="m_nav_start_again">Start Again</string>
    <string name="m_nav_back">Back</string>
    <string name="m_nav_get_result">Get Result!</string>
	<string name="m_biblos">View bibliography and references</string>
</resources>