<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/composite6"
    android:gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:layout_margin="10dp"
    android:id="@+id/llMain"
    android:gravity="center_horizontal|top"
    android:layout_gravity="center_horizontal|top"
    >
    
    
        <LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/llTitleArea"
	    android:gravity="left|center_vertical"
	    android:layout_gravity="left|top"
	    android:layout_weight="0"
	    >
	
	  		<ImageView 
		    android:src="@drawable/innericon"
			style="@style/logo_small"
		    android:id="@+id/iInnerIcon"
		    android:paddingRight="15dp"
		    />
		    
    		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    style="@style/h1"
		    android:text="@string/m_11step"
		    android:paddingBottom="3dp"
		    />
	    
	    </LinearLayout>
	    
        <ScrollView 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="vertical"
	    android:scrollbarStyle="outsideOverlay"
	    android:id="@+id/svMain"
	    android:layout_weight="1"
	    android:padding="4dp"
	    >
	    
	    
        <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/llScrollArea"
	    android:gravity="center"
	    android:layout_gravity="top"
	    >
		    
		    
	        <LinearLayout 
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/llQuestionArea"
		    android:gravity="center"
		    android:layout_gravity="center"
		    android:layout_marginBottom="5dp"
		    android:padding="5dp"
		    android:layout_weight="2"
		    />
	        
   	        <LinearLayout 
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/llContextArea"
		    android:gravity="left|center_vertical"
		    android:layout_gravity="left|center_vertical"
		    android:layout_weight="1"
		    >
		    
	     
		   		<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/m_11step_content"
			    style="@style/h3"
			    />
		   		
   				<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    style="@style/b1lb"
			    android:text="@string/m_resourcecenter"
	   		    android:id="@+id/btnMoreInfo"
	   		    android:layout_weight="1"
	   		    android:tag="moreinfo"
			    />
   				
 				<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    android:text="@string/m_biblos"
			    android:id="@+id/btnToBiblos"
			    style="@style/b1la"
			    android:layout_margin="2dp"
			    android:tag="biblos"
			    android:layout_weight="1"
			    />
		   			   	
		    
		    </LinearLayout>
	    
    	</LinearLayout>
    	</ScrollView>
	    
        <LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/llNavArea"
	    android:gravity="top|right"
	    android:layout_gravity="top|right"
	    android:layout_weight="0"
	    >
	    
       		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/m_nav_back"
		    android:id="@+id/btnNavBack"
		    style="@style/b1ln"
		    android:layout_margin="2dp"
		    />
		    
       		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/m_nav_start_again"
		    android:id="@+id/btnNavEnd"
		    style="@style/b1ln"
		    android:layout_margin="2dp"
		    />
			 
       		
	    
	    </LinearLayout>
	    
     
    
    </LinearLayout>
    
    
    
</LinearLayout>
